namespace GoldMetrics.GoldCheck.Platform.IncidentManagement.Domain.Model.Commands;

public record DetectSmokeCommand(string AssetId);