namespace GoldMetrics.GoldCheck.Platform.IncidentManagement.Domain.Model.Commands;

public record EvaluateSafetyRiskCommand(int Id);