using GoldMetrics.GoldCheck.Platform.Shared.Domain.Model.Events;

namespace GoldMetrics.GoldCheck.Platform.IncidentManagement.Domain.Model.Events;

public record RiskLevelEscalatedEvent(string IncidentId, string NewRiskLevel) : IEvent;