namespace GoldMetrics.GoldCheck.Platform.IncidentManagement.Domain.Model.Queries;

public record GetAllIncidentsQuery();