namespace GoldMetrics.GoldCheck.Platform.IncidentManagement.Domain.Model.Queries;

public record GetIncidentByIdQuery(int Id);