namespace GoldMetrics.GoldCheck.Platform.IncidentManagement.Domain.Model.Queries;

public record GetIncidentsByTypeQuery(string IncidentType);